# soroban-copilot

./: Cargo.toml  LICENSE  Makefile  README.md
contract-implementations/token/: Cargo.toml
contract-implementations/token/src/: admin.rs  balance.rs  contract.rs  errors.rs  interface.rs  lib.rs  storage.rs
fixed-point-math/: Cargo.toml  README.md
fixed-point-math/src/: fixed_point.rs  i128.rs  lib.rs  u64.rs
soroban-contracts/: Cargo.toml  README.md
soroban-contracts/src/: lib.rs  token.rs
soroban-contracts/wasm/: token.wasm
