[workspace]
resolver = "2"

members = [
	"contract-implementations/token",
	"fixed-point-math",
	"soroban-contracts"
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true